<resources>
    <string name="app_name">task414</string>
    <string name="pick_one">Pick one</string>
    <string name="donutText">Donuts are glazed and sprinkled with candy</string>
    <string name="hello_consumer">Hello consumer</string>
    <string name="icecream_text">Ice cream sandwiches have chocolate wafers and vanilla</string>
    <string name="froyo_text">FroYo is premium self-serve frozen yogurt</string>
    <string name="settings">Settings</string>
    <string name="same_day">"Same day delivery "</string>
    <string name="next_day">Next day delivery</string>
    <string name="pick_up">Pick up</string>
    <string name="choose_delivery">Choose delivery method</string>
</resources>